# RAG

./: README.md  app.py  pyproject.toml
chroma_db_SirishtiSingh-Data-Analyst.pdf/: chroma.sqlite3
